--- a/public/css/app57e7.css
+++ b/public/css/app57e7.css
@@ -13852,8 +13852,8 @@ body.swal2-iosfix {
 }
 
 .btn--primary {
-    background: #a07151;
-    border: 1px solid #a07151;
+    background: #3988c8;
+    border: 1px solid #3988c8;
     color: #fff
 }
 
@@ -13876,8 +13876,8 @@ body.swal2-iosfix {
 }
 
 .btn--primary-50 {
-    background: #f0e1c5;
-    border: 1px solid #f0e1c5;
+    background: #c5d4f0;
+    border: 1px solid #c5d4f0;
     color: #4a4a4a
 }
 
@@ -13886,8 +13886,8 @@ body.swal2-iosfix {
 }
 
 .btn--primary-100 {
-    background: #e8ceb1;
-    border: 1px solid #e8ceb1;
+    background: #b1cbe8;
+    border: 1px solid #b1cbe8;
     color: #4a4a4a
 }
 
@@ -13896,9 +13896,9 @@ body.swal2-iosfix {
 }
 
 .btn--light {
-    background: #f9f2e7;
+    background: #e7eef9;
     border: 1px solid;
-    color: #715746
+    color: #466071
 }
 
 .btn--light__icon {
@@ -13906,11 +13906,11 @@ body.swal2-iosfix {
 }
 
 .btn--outlined {
-    border: 1px solid #a07151
+    border: 1px solid #3988c8
 }
 
 .btn--outlined--light {
-    border-color: #e8ceb1
+    border-color: #b1cbe8
 }
 
 .btn--block {
@@ -13938,7 +13938,7 @@ body.swal2-iosfix {
 
 .btn--circular {
     border-radius: 50%;
-    color: #a07151 !important;
+    color: #3988c8 !important;
     display: inline-block;
     height: 36px;
     line-height: 30px;
@@ -13954,8 +13954,8 @@ body.swal2-iosfix {
 }
 
 .btn--player {
-    background: #a07151;
-    color: #e8ceb1 !important;
+    background: #3988c8;
+    color: #b1cbe8 !important;
     display: block;
     height: calc(100% - 9px);
     line-height: 2.1;
@@ -14024,7 +14024,7 @@ body.swal2-iosfix {
 }
 
 .card {
-    border-color: #e8ceb1;
+    border-color: #b1cbe8;
     -webkit-box-shadow: 0 1px 2px #ddd;
     box-shadow: 0 1px 2px #ddd
 }
@@ -14054,7 +14054,7 @@ body.swal2-iosfix {
 }
 
 .card--no-cover {
-    border-right: 3px solid #cf9d65
+    border-right: 3px solid #6597cf
 }
 
 .card--no-cover,
@@ -14158,7 +14158,7 @@ body.swal2-iosfix {
 }
 
 .card__content__header__title {
-    color: #715746;
+    color: #466071;
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
@@ -14184,7 +14184,7 @@ body.swal2-iosfix {
 }
 
 .card__content__summary {
-    color: #483e36;
+    color: #4974a5;
     font-family: Noto Naskh Arabic, arial, sans-serif;
     font-size: 16px
 }
@@ -14203,7 +14203,7 @@ body.swal2-iosfix {
 }
 
 .card__content__meta p {
-    color: #a07151
+    color: #3988c8
 }
 
 .card__content--meta-left {
@@ -14237,7 +14237,7 @@ body.swal2-iosfix {
 
 .card__title--no-border {
     border-right: 0;
-    color: #a07151;
+    color: #3988c8;
     padding-left: 0;
     padding-right: 0
 }
@@ -14292,7 +14292,7 @@ body.swal2-iosfix {
 }
 
 .card__list__item-tag {
-    background: #f0e1c5;
+    background: #c5d4f0;
     color: #4a4a4a;
     font-family: Noto Kufi Arabic, arial, sans-serif;
     font-size: 12px;
@@ -14320,7 +14320,7 @@ body.swal2-iosfix {
 }
 
 .list-card li {
-    border-bottom: 1px solid #e8ceb1;
+    border-bottom: 1px solid #b1cbe8;
     margin-bottom: 10px;
     padding-bottom: 10px
 }
@@ -14332,7 +14332,7 @@ body.swal2-iosfix {
 .list-card .avatar {
     background: top no-repeat;
     background-size: cover;
-    border: .5px solid #e8ceb1;
+    border: .5px solid #b1cbe8;
     border-radius: 3px;
     height: 70px;
     max-width: 70px
@@ -14418,7 +14418,7 @@ body.swal2-iosfix {
 }
 
 .content-card__navigation .btn {
-    color: #a07151;
+    color: #3988c8;
     display: inline-block;
     height: 40px;
     line-height: 40px;
@@ -14429,9 +14429,9 @@ body.swal2-iosfix {
 
 .content-card__navigation .btn:active,
 .content-card__navigation .btn:hover {
-    background-color: #f9f2e7;
-    border-color: #715746;
-    color: #715746
+    background-color: #e7eef9;
+    border-color: #466071;
+    color: #466071
 }
 
 .content-card__footer {
@@ -14492,9 +14492,9 @@ body.swal2-iosfix {
 }
 
 .card-footer {
-    background: #f9f2e7;
+    background: #e7eef9;
     border-top: 0;
-    color: #a07151;
+    color: #3988c8;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between
@@ -14517,7 +14517,7 @@ body.swal2-iosfix {
 
 .sidebar--box {
     background: #fff;
-    border: 1px solid #e8ceb1;
+    border: 1px solid #b1cbe8;
     border-radius: 3px;
     -webkit-box-shadow: 0 1px 2px #ddd;
     box-shadow: 0 1px 2px #ddd;
@@ -14525,11 +14525,11 @@ body.swal2-iosfix {
 }
 
 .sidebar--box--primary-light {
-    background: #f9f2e7
+    background: #e7eef9
 }
 
 .sidebar--box--retro {
-    background: #f9f2e7;
+    background: #e7eef9;
     -webkit-box-shadow: inset 0 0 20px 6px hsla(37, 26%, 59%, .45);
     box-shadow: inset 0 0 20px 6px hsla(37, 26%, 59%, .45)
 }
@@ -14569,7 +14569,7 @@ body.swal2-iosfix {
 }
 
 .input-group {
-    border: 1px solid #cf9d65;
+    border: 1px solid #6597cf;
     border-radius: 3px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -14586,9 +14586,9 @@ body.swal2-iosfix {
 }
 
 .input-group__input:focus {
-    border-color: #a07151;
-    -webkit-box-shadow: 0 0 3px #a07151;
-    box-shadow: 0 0 3px #a07151
+    border-color: #3988c8;
+    -webkit-box-shadow: 0 0 3px #3988c8;
+    box-shadow: 0 0 3px #3988c8
 }
 
 .input-group__appended {
@@ -14798,7 +14798,7 @@ body.swal2-iosfix {
 }
 
 .news-ticker__header {
-    border-bottom: 350px solid #483e36;
+    border-bottom: 350px solid #4974a5;
     border-left: 350px solid transparent;
     color: #fff;
     display: block;
@@ -14811,7 +14811,7 @@ body.swal2-iosfix {
 }
 
 .news-ticker__center {
-    border-bottom: 25px solid #483e36;
+    border-bottom: 25px solid #4974a5;
     color: #fff;
     display: block;
     height: 0;
@@ -14824,7 +14824,7 @@ body.swal2-iosfix {
 }
 
 .news-ticker__footer {
-    border-bottom: 350px solid #483e36;
+    border-bottom: 350px solid #4974a5;
     border-right: 350px solid transparent;
     color: #fff;
     display: block;
@@ -14838,16 +14838,16 @@ body.swal2-iosfix {
 
 @media only screen and (max-width:768px) {
     .news-ticker__header {
-        border: 100vw solid #483e36
+        border: 100vw solid #4974a5
     }
 
     .news-ticker__footer {
-        border: 100vw solid #483e36
+        border: 100vw solid #4974a5
     }
 }
 
 .news-ticker__items {
-    color: #a07151;
+    color: #3988c8;
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
@@ -15038,9 +15038,9 @@ body.swal2-iosfix {
 .pagination>li>a:hover,
 .pagination>li>span:focus,
 .pagination>li>span:hover {
-    background-color: #a07151;
-    border-color: #715746;
-    color: #e8ceb1;
+    background-color: #3988c8;
+    border-color: #466071;
+    color: #b1cbe8;
     z-index: 2
 }
 
@@ -15050,7 +15050,7 @@ body.swal2-iosfix {
 .pagination>.active>span,
 .pagination>.active>span:focus,
 .pagination>.active>span:hover {
-    background-color: #a07151;
+    background-color: #3988c8;
     border-color: #b59073;
     color: #fff;
     cursor: default;
@@ -15077,7 +15077,7 @@ body.swal2-iosfix {
 .spinner>div {
     -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
     animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    background-color: #715746;
+    background-color: #466071;
     border-radius: 100%;
     display: inline-block;
     height: 18px;
@@ -15210,7 +15210,7 @@ p {
 
 .original-text {
     background: rgba(255, 250, 244, .8);
-    border-right: 3px solid #a07151;
+    border-right: 3px solid #3988c8;
     display: block;
     margin-top: 5px;
     padding: 4px 10px
@@ -15387,9 +15387,9 @@ body.fixed .logo-img-shown-when-fixed {
 }
 
 nav.main-nav {
-    background: -webkit-gradient(linear, left top, left bottom, from(#59504a), to(#483e36));
-    background: linear-gradient(180deg, #59504a 0, #483e36);
-    border-bottom: 3px solid #a07151;
+    background: -webkit-gradient(linear, left top, left bottom, from(#59504a), to(#4974a5));
+    background: linear-gradient(180deg, #59504a 0, #4974a5);
+    border-bottom: 3px solid #3988c8;
     color: #fff;
     font-size: 1rem;
     width: 100%
@@ -15429,7 +15429,7 @@ nav.main-nav ul li {
 }
 
 nav.main-nav ul li:hover {
-    background: #715746
+    background: #466071
 }
 
 @media only screen and (max-width:768px) {
@@ -15441,7 +15441,7 @@ nav.main-nav ul li:hover {
 
 nav.main-nav ul .active,
 nav.main-nav ul .active:hover {
-    background: #a07151
+    background: #3988c8
 }
 
 nav.main-nav a {
@@ -15683,7 +15683,7 @@ nav.main-nav .search-toggle:hover {
 }
 
 .separator--vertical {
-    background: #e8ceb1;
+    background: #b1cbe8;
     margin: 0 25px 15px;
     width: 1px
 }
@@ -15736,7 +15736,7 @@ nav.main-nav .search-toggle:hover {
 
 .heading__title {
     border-right: 5px solid #b59073;
-    color: #715746;
+    color: #466071;
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
@@ -15751,13 +15751,13 @@ nav.main-nav .search-toggle:hover {
 }
 
 .heading__extra {
-    color: #a07151;
+    color: #3988c8;
     text-align: left
 }
 
 .slick-next,
 .slick-prev {
-    background: #cf9d65 !important;
+    background: #6597cf !important;
     border-radius: 0;
     height: 40px !important;
     width: 34px !important
@@ -15838,13 +15838,13 @@ nav.main-nav .search-toggle:hover {
 
 .tabs__toggle .active,
 .tabs__toggle:focus {
-    background-color: #a07151;
+    background-color: #3988c8;
     color: #fff
 }
 
 .tabs__toggle--element {
-    background: #e8ceb1;
-    color: #a07151;
+    background: #b1cbe8;
+    color: #3988c8;
     cursor: pointer;
     padding: 10px
 }
@@ -15896,7 +15896,7 @@ nav.main-nav .search-toggle:hover {
 }
 
 .count-down {
-    background: #a07151;
+    background: #3988c8;
     bottom: 0;
     color: #fff;
     height: 40px;
@@ -15999,7 +15999,7 @@ nav.main-nav .search-toggle:hover {
 }
 
 video {
-    border: 1px solid #e8ceb1;
+    border: 1px solid #b1cbe8;
     -webkit-box-shadow: 0 1px 2px #ddd;
     box-shadow: 0 1px 2px #ddd;
     max-width: 100%
@@ -16019,16 +16019,16 @@ video {
 }
 
 .breadcrumb {
-    background-color: #f9f2e7;
+    background-color: #e7eef9;
     border-radius: 0;
-    border-right: 3px solid #cf9d65;
+    border-right: 3px solid #6597cf;
     font-family: Noto Naskh Arabic, arial, sans-serif;
     margin-top: 0
 }
 
 .breadcrumb .breadcrumb-item:not(.active),
 .breadcrumb .breadcrumb-item:not(.active):before {
-    color: #a07151
+    color: #3988c8
 }
 
 .breadcrumb .breadcrumb-item:last-child {
@@ -16038,7 +16038,7 @@ video {
 .next-prev-button i,
 .next-prev-button i:hover,
 .next-prev-button i:link {
-    color: #715746
+    color: #466071
 }
 
 .search-tabs {
@@ -16057,14 +16057,14 @@ video {
 }
 
 .search-tabs li {
-    background: #f9f2e7;
+    background: #e7eef9;
     border-radius: 4px;
     padding: 4px 10px
 }
 
 .search-tabs li.active,
 .search-tabs li:hover {
-    background: #f0e1c5
+    background: #c5d4f0
 }
 
 .search-results__item {
@@ -16092,7 +16092,7 @@ video {
 }
 
 .list-item__border-bottom {
-    border-bottom: 1px solid #e8ceb1;
+    border-bottom: 1px solid #b1cbe8;
     margin-bottom: 25px;
     padding: 8px 8px 25px
 }
@@ -16318,7 +16318,7 @@ hr.slim-gray {
 }
 
 .chunk-title {
-    color: #715746 !important;
+    color: #466071 !important;
     display: block;
     font-weight: 700;
     position: relative
@@ -16344,7 +16344,7 @@ hr.slim-gray {
 }
 
 .colored-text-in-introjs.introjs-showElement {
-    color: #a07151
+    color: #3988c8
 }
 
 .floating-suggestion {
@@ -16564,11 +16564,11 @@ hr.slim-gray {
 }
 
 .text--primary-500 {
-    color: #a07151
+    color: #3988c8
 }
 
 .text--primary-600 {
-    color: #715746
+    color: #466071
 }
 
 @media only screen and (max-width:768px) {
@@ -16738,7 +16738,7 @@ hr.slim-gray {
 }
 
 .utility__border--color--primary-50 {
-    border-color: #f0e1c5
+    border-color: #c5d4f0
 }
 
 .utility__color--primary-4 {
@@ -16746,11 +16746,11 @@ hr.slim-gray {
 }
 
 .utility__color--primary {
-    color: #a07151
+    color: #3988c8
 }
 
 .utility__color--primary-6 {
-    color: #715746
+    color: #466071
 }
 
 .utility__color--primary-7 {
@@ -16758,7 +16758,7 @@ hr.slim-gray {
 }
 
 .utility__color--primary-8 {
-    color: #483e36
+    color: #4974a5
 }
 
 .utility__social__bg--twitter {
@@ -16829,7 +16829,7 @@ hr.slim-gray {
 }
 
 .download-btn {
-    background-color: #e8ceb1;
+    background-color: #b1cbe8;
     border: 1px solid #eee;
     border-radius: 5px;
     -webkit-box-shadow: inset 0 0 0 1px #fff;
@@ -16869,7 +16869,7 @@ hr.slim-gray {
 
 .jp-jplayer .icon:hover,
 .jp-jplayer .jp-button button:hover {
-    color: #f0e1c5
+    color: #c5d4f0
 }
 
 .jp-jplayer video {
@@ -16883,7 +16883,7 @@ hr.slim-gray {
 }
 
 .jp-audio a {
-    color: #e8ceb1;
+    color: #b1cbe8;
     text-decoration: none
 }
 
@@ -16892,11 +16892,11 @@ hr.slim-gray {
 }
 
 .jp-interface {
-    background-color: #483e36;
+    background-color: #4974a5;
     border-radius: 5px;
     -webkit-box-shadow: 0 0 3px #4a4a4a;
     box-shadow: 0 0 3px #4a4a4a;
-    color: #f0e1c5;
+    color: #c5d4f0;
     display: none;
     height: 40px;
     position: relative;
@@ -16918,7 +16918,7 @@ hr.slim-gray {
     background: 0 0;
     border: 0;
     border-radius: 0;
-    color: #e8ceb1;
+    color: #b1cbe8;
     cursor: pointer;
     display: block;
     height: 40px;
@@ -16928,7 +16928,7 @@ hr.slim-gray {
     padding: 0;
     position: relative;
     text-indent: 110%;
-    text-shadow: 1px 1px #483e36;
+    text-shadow: 1px 1px #4974a5;
     -webkit-transition: none;
     transition: none;
     white-space: nowrap;
@@ -16951,7 +16951,7 @@ hr.slim-gray {
 
 .jp-mute:hover,
 .jp-play:hover {
-    color: #f0e1c5
+    color: #c5d4f0
 }
 
 .jp-play:before {
@@ -17064,7 +17064,7 @@ hr.slim-gray {
 
 .jp-play-bar,
 .jp-volume-bar-value {
-    background-color: #e8ceb1;
+    background-color: #b1cbe8;
     background-size: .4375em .4375em;
     -webkit-box-shadow: inset 0 1px 2px hsla(0, 0%, 100%, .3);
     box-shadow: inset 0 1px 2px hsla(0, 0%, 100%, .3)
@@ -17157,8 +17157,8 @@ hr.slim-gray {
 }
 
 .with-hover-effect:hover {
-    -webkit-box-shadow: 0 0 2px 0 #a07151 inset;
-    box-shadow: inset 0 0 2px 0 #a07151;
+    -webkit-box-shadow: 0 0 2px 0 #3988c8 inset;
+    box-shadow: inset 0 0 2px 0 #3988c8;
     -webkit-transform: translateY(-1px);
     transform: translateY(-1px);
     -webkit-transition: -webkit-transform .1s ease-in-out, -webkit-box-shadow .1s;
