Switch color to blue
Signed-off-by: CaddyDz <caddydz4@gmail.com>

--- a/public/css/app57e7.css
+++ b/public/css/app57e7.css
@@ -13882,7 +13882,7 @@ body.swal2-iosfix {
 }
 
 .btn--primary-50 i {
-    color: #b59073
+    color: #7398b5
 }
 
 .btn--primary-100 {
@@ -13892,7 +13892,7 @@ body.swal2-iosfix {
 }
 
 .btn--primary-100 i {
-    color: #b59073
+    color: #7398b5
 }
 
 .btn--light {
@@ -13902,7 +13902,7 @@ body.swal2-iosfix {
 }
 
 .btn--light__icon {
-    color: #b59073
+    color: #7398b5
 }
 
 .btn--outlined {
@@ -14363,7 +14363,7 @@ body.swal2-iosfix {
 }
 
 .content-card__title {
-    color: #b59073;
+    color: #7398b5;
     font-size: 20px;
     margin: auto;
     padding: 10px 0
@@ -14597,7 +14597,7 @@ body.swal2-iosfix {
 }
 
 .input-group__appended i {
-    color: #b59073
+    color: #7398b5
 }
 
 .input-group--header {
@@ -15012,7 +15012,7 @@ body.swal2-iosfix {
 .pagination>li>span {
     background-color: #fff;
     border: 1px solid #ddd;
-    color: #b59073;
+    color: #7398b5;
     float: left;
     line-height: 1.42857143;
     margin-left: -1px;
@@ -15051,7 +15051,7 @@ body.swal2-iosfix {
 .pagination>.active>span:focus,
 .pagination>.active>span:hover {
     background-color: #3988c8;
-    border-color: #b59073;
+    border-color: #7398b5;
     color: #fff;
     cursor: default;
     z-index: 3
@@ -15304,7 +15304,7 @@ blockquote>div:after {
 
 blockquote>div:after,
 blockquote>div:before {
-    color: #b59073;
+    color: #7398b5;
     font-size: 60px;
     font-weight: 700;
     position: absolute
@@ -15735,7 +15735,7 @@ nav.main-nav .search-toggle:hover {
 }
 
 .heading__title {
-    border-right: 5px solid #b59073;
+    border-right: 5px solid #7398b5;
     color: #466071;
     -webkit-box-flex: 1;
     -ms-flex: 1;
@@ -16140,7 +16140,7 @@ video {
 
 sup>a,
 sup>a:link {
-    color: #b59073
+    color: #7398b5
 }
 
 .logo-footer-img {
@@ -16742,7 +16742,7 @@ hr.slim-gray {
 }
 
 .utility__color--primary-4 {
-    color: #b59073
+    color: #7398b5
 }
 
 .utility__color--primary {
